feat: Adicionado autenticacao e atualizado swagger
